# tree-sitter-scheme

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: build.yml  test.yml
bindings/c/: tree-sitter-scheme.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_scheme/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterScheme/: scheme.h
bindings/swift/TreeSitterSchemeTests/: TreeSitterSchemeTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: ext.scm
